@@ -1,3 +1,6 @@
+2014-06-27  6.8.9-5 Dirk Lemstra <dirk@snakeware...>
+  * Disabled OpenCL acceleration when image has a 'mask' or 'clip-mask'.
+
 2014-06-25  6.8.9-5 Cristy  <quetzlzacatenango@image...>
   * Use -define profile:skip=icc, for example,  to skip color profiles on read.
 
